# docker-builder

./: .gitignore  .pre-commit-config.yaml  .trivyignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: build-docs.yml  docker-build.yml  pre-commit.yml  test-build.yml  tests.yml
_modules/: index.html
_modules/docker_builder/: generate.html
config/: versions.yaml
docker-builder/: generate.py
docs/: conf.py  index.rst
docs/reference/: index.rst
reference/: index.html
scripts/: build.sh  clean.sh  generate.py  run.sh
src/docker_builder/: __init__.py  generate.py
templates/: .vimrc_template  Dockerfile.cpu.j2  Dockerfile.gpu.j2  requirements_template.txt
tests/: test_generate.py  test_workflow.py
tutorial/: interactive_useage.md
