[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-builder"
version = "0.1.0"
description = "CLI tool to generate CPU and GPU Dockerfiles from Jinja2 templates and YAML configuration."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Balázs Paszkál Halmos" }
]
license = { text = "GNUv3" }

# Dependencies are dynamically loaded from requirements.txt
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
docs = []

[tool.setuptools.dynamic.optional-dependencies.docs]
file = ["requirements-docs.txt"]

[project.scripts]
docker-builder = "docker_builder.generate:main"